--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Learn The Way To Code</title>
 
     <!-- Bootstrap Link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="custom.css">
@@ -16,10 +17,64 @@
 
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/15c6c7c2c4.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
+</head>
+<body>
 
-    <h1 class="fs-6">Codeway<i class="fa-brands fa-facebook"></i></h1>
+    <!-- ================================== Header ================================== -->
+    <header>
+
+        <!-- ============== Navbar =============== -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-lg py-2">
+
+                <!-- Logo Text  -->
+                <a class="navbar-brand fs-1 fw-semibold text-" href="#"><span class="text-warning">Code</span>way</a>
+
+                <!-- collapse button  -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Menu bar  -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="container-fluid">
+                        <div class="d-flex justify-content-center my-4">
+                            <ul class="navbar-nav gap-3 align-items-center fs-5">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Courses</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Deals</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Success</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Register</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Register Button  -->
+                    <form class="d-flex justify-content-center" role="search">
+                        <button class="btn btn-outline-success fs-5 fw-semibold px-4" type="submit">Register</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- Navbar End  -->
+
+
+    </header>
 
 
 
@@ -35,6 +90,8 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
 </html>
