forgot some changes

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                             <div class="position-absolute top-50 start-50 translate-middle w-75">
                                 <div class="d-flex flex-column align-items-center text-white">    
                                     <h1 class="text-center">Let's make your first code here</h1>
-                                    <p class="fs-5 text-center">Codeway offers premium courses related to programming. Those who are interested in programming are highly recommended to try it out.</p>
-                                    <button class="btn btn-success text-white fs-4 py-3 px-5">Get Started</button>
+                                    <p class="text-center fs-5">Codeway offers premium courses related to programming. Those who are interested in programming are highly recommended to try it out.</p>
+                                    <button class="btn btn-success text-white fs-5 py-2 px-4">Get Started</button>
                                 </div>
                             </div>
                             <img src="images/cover/cover-2.jpg" class="d-block w-100 rounded" alt="...">
@@ -102,18 +102,18 @@
                             <div class="position-absolute top-50 start-50 translate-middle w-75">
                                 <div class="d-flex flex-column align-items-center text-white">    
                                     <h1 class="text-center">Let's make your first code here</h1>
-                                    <p class="fs-5 text-center">Codeway offers premium courses related to programming. Those who are interested in programming are highly recommended to try it out.</p>
-                                    <button class="btn btn-success text-white fs-4 py-3 px-5">Get Started</button>
+                                    <p class="text-center fs-5">Codeway offers premium courses related to programming. Those who are interested in programming are highly recommended to try it out.</p>
+                                    <button class="btn btn-success text-white fs-5 py-2 px-4">Get Started</button>
                                 </div>
                             </div>
                             <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded" alt="...">
                         </div>
-                    <button class="carousel-control-prev d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
