Modified Carousel and Added Courses Grid Part

--- a/index.html
+++ b/index.html
@@ -125,7 +125,103 @@
 
     <!-- ========== End of Header (Not Completed) ========== -->
 
+    <!-- ============================ Content Body =========================== -->
+    <main>
+        <!-- ========== Discover Popular Courses ========== -->
+        <section>
 
+            <!-- Top Description of Popular Courses -->
+            <div class="container-lg text-center mt-5 mb-4">
+                <h1>Discover Our Popular Courses</h1>
+                <p class="w-75 mx-auto">We provide different kinds of courses related to programming and others too. Among them, most of our students like these courses more below. </p>
+            </div>
+
+            <!-- Courses Box -->
+            <div class="container-lg">
+                <div class="row g-3">
+                    
+                    <!-- UI/UX Design  -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-1.png" alt="">
+                            <div class="p-3">
+                                <h2>UI/UX Design</h2>
+                                <p>In this course, you will be learnt the best UI/UX design methods by our experts.</p>
+                                <h4 class="text-info">Price: 15$</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Javascript  -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-2.png" alt="">
+                            <div class="p-3">
+                                <h2>Javascript</h2>
+                                <p>In this course, you will be learnt advance Javascript programming by our experts.</p>
+                                <h4 class="text-info">Price: 18$</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Full Stack Web Development  -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-3.png" alt="">
+                            <div class="p-3">
+                                <h2>Developer</h2>
+                                <p>In this course, you will be learnt full stack web development by our experts.</p>
+                                <h4 class="text-info">Price: 25$</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Digital Marketing  -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-4.png" alt="">
+                            <div class="p-3">
+                                <h2>Marketing</h2>
+                                <p>In this course, you will be learnt efficient rules of Digital Marketing by our experts.</p>
+                                <h4 class="text-info">Price: 17$</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Photography -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-5.png" alt="">
+                            <div class="p-3">
+                                <h2>Photography</h2>
+                                <p>In this course, you will be learnt some basic rules of Photography by our experts.</p>
+                                <h4 class="text-info">Price: 12$</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Motion Graphics -->
+                    <div class="col-12 col-lg-6">
+                        <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
+                            <img class="img-fluid custom-width" src="images/course/course-6.png" alt="">
+                            <div class="p-3">
+                                <h2>Graphics</h2>
+                                <p>In this course, you will be learnt some motion graphics fundamental by our experts.</p>
+                                <h4 class="text-info">Price: 22$</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- View All Button  -->
+            <div>
+                <button class="btn btn-info text-white rounded px-4 py-2 d-block mx-auto mt-3 mb-5">View All</button>
+            </div>
+        </section>
+        <!-- =========== End of Popular Courses =========== -->
+
+    </main>
 
 
 
