3 boxes hidden for tablet and mobile devices

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
 
                     <!-- Digital Marketing  -->
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 d-lg-block d-none">
                         <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
                             <img class="img-fluid custom-width" src="images/course/course-4.png" alt="">
                             <div class="p-3">
@@ -189,7 +189,7 @@
                     </div>
 
                     <!-- Photography -->
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 d-lg-block d-none">
                         <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
                             <img class="img-fluid custom-width" src="images/course/course-5.png" alt="">
                             <div class="p-3">
@@ -201,7 +201,7 @@
                     </div>
 
                     <!-- Motion Graphics -->
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 d-lg-block d-none">
                         <div class="border border-dark rounded d-sm-flex align-items-center gap-3">
                             <img class="img-fluid custom-width" src="images/course/course-6.png" alt="">
                             <div class="p-3">
