--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                             <h1>Ready to join?</h1>
                             <p>Before you join our courses, make sure you are fully mentally, physically and
                                 financially
-                                prepared. Because once you join, we are gonna make your life hell, kidding, we want you to
+                                prepared. Because once you join, we are gonna make your life hell, kidding, we want you
+                                to
                                 be successful.</p>
                         </div>
 
@@ -253,7 +254,7 @@
                                 data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Register Now
                             </button>
-    
+
                             <!-- Modal -->
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                                 aria-hidden="true">
@@ -264,28 +265,35 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
-    
+
                                         <!-- Modal Body  -->
                                         <div class="modal-body">
                                             <form>
                                                 <div class="mb-3">
-                                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                                    <label for="exampleInputEmail1" class="form-label">Email
+                                                        address</label>
                                                     <input type="email" class="form-control" id="exampleInputEmail1"
                                                         aria-describedby="emailHelp" placeholder="Type Your Email">
-                                                    <div id="emailHelp" class="form-text">We'll never share your email with
+                                                    <div id="emailHelp" class="form-text">We'll never share your email
+                                                        with
                                                         anyone else.</div>
                                                 </div>
                                                 <div class="">
-                                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Type Password">
+                                                    <label for="exampleInputPassword1"
+                                                        class="form-label">Password</label>
+                                                    <input type="password" class="form-control"
+                                                        id="exampleInputPassword1" placeholder="Type Password">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm Password">
+                                                    <label for="exampleInputPassword1"
+                                                        class="form-label">Password</label>
+                                                    <input type="password" class="form-control"
+                                                        id="exampleInputPassword1" placeholder="Confirm Password">
                                                 </div>
                                                 <div class="mb-3 form-check">
                                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                                    <label class="form-check-label text-dark" for="exampleCheck1">Remember Me</label>
+                                                    <label class="form-check-label text-dark"
+                                                        for="exampleCheck1">Remember Me</label>
                                                 </div>
                                                 <button type="submit" class="btn btn-primary">Register</button>
                                             </form>
@@ -304,7 +312,96 @@
         </section>
         <!-- ============= End of Modal (Ready to join part) =============  -->
 
-
+        <!-- ==================== Frequently Asked Questions =================== -->
+        <section>
+            <div class="container-lg mb-5">
+                <div class="text-center">
+                    <h1>Frequently Asked Questions</h1>
+                    <p>Questions those are asked several times, we tried to answer here. Check it out before you ask.
+                    </p>
+                </div>
+                <div>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    Accordion Item #4
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
