Trusted by Companies Part Added

--- a/index.html
+++ b/index.html
@@ -402,8 +402,25 @@
                 </div>
             </div>
         </section>
+        <!-- ============ End of FAQ ============ -->
 
+        <!-- ==================== Trusted by Companies =================== -->
+        <section class="d-none d-lg-block">
+            <div class="container-lg my-5">
+                <h1 class="text-center mb-4 fw-bold">Trusted by over 800+ companies</h1>
+                <div class="d-flex justify-content-evenly">
+                    <img src="images/company/company-1.png" alt="">
+                    <img src="images/company/company-2.png" alt="">
+                    <img src="images/company/company-3.png" alt="">
+                    <img src="images/company/company-4.png" alt="">
+                    <img src="images/company/company-5.png" alt="">
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- ========== End of Trusted by Companies ========= -->
     </main>
+    <!-- ======= End of Content Body ======= -->
 
 
 
