--- a/index.html
+++ b/index.html
@@ -423,15 +423,28 @@
     <!-- ======= End of Content Body ======= -->
 
 
+    <!-- ================================ Footer ============================= -->
+    <footer class="bg-dark text-white text-center">
+        <div class="container-lg py-5">
+            <div>
+                <h1><span class="text-warning">Code</span>Way</h1>
+                <p>Madhabpur, Habiganj, Bangladesh</p>
+                <p>
+                    <a href="#" class="text-white text-decoration-none">Privacy Policy </a>
+                    |
+                    <a href="#" class="text-white text-decoration-none"> Terms of Use</a>
+                </p>
+            </div>
+            <div class="fs-3">
+                <a href="#" class="text-white"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" class="text-white"><i class="fa-brands fa-youtube mx-2"></i></a>
+                <a href="#" class="text-white"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+    <!-- ======== End of Footer ========= -->
 
-
-
-
-
-
-
-
-
+    <!-- Bootstrap JS CDN link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
