--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Courses</a>
+                                    <a class="nav-link" href="#courses">Courses</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Deals</a>
+                                    <a class="nav-link" href="#deals">Deals</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Success</a>
+                                    <a class="nav-link" href="#faq">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
+                                    <a class="nav-link" href="#about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Register</a>
+                                    <a class="nav-link" href="#register">Register</a>
                                 </li>
                             </ul>
                         </div>
@@ -129,12 +129,12 @@
         </section>
     </header>
 
-    <!-- ========== End of Header (Not Completed) ========== -->
+    <!-- ========== End of Header ========== -->
 
     <!-- ============================ Content Body =========================== -->
     <main>
         <!-- ========== Discover Popular Courses ========== -->
-        <section>
+        <section id="courses">
 
             <!-- Top Description of Popular Courses -->
             <div class="container-lg text-center mt-5 mb-4">
@@ -232,7 +232,7 @@
         <!-- =========== End of Popular Courses =========== -->
 
         <!-- ==================== Ready to Join =================== -->
-        <section>
+        <section id="register">
             <div class="container-lg">
                 <div class="bg-info rounded text-white py-5 px-3 px-sm-5 my-5">
                     <div class="row">
@@ -313,7 +313,7 @@
         <!-- ============= End of Modal (Ready to join part) =============  -->
 
         <!-- ==================== Frequently Asked Questions =================== -->
-        <section>
+        <section id="faq">
             <div class="container-lg mb-5">
                 <div class="text-center">
                     <h1>Frequently Asked Questions</h1>
@@ -405,7 +405,7 @@
         <!-- ============ End of FAQ ============ -->
 
         <!-- ==================== Trusted by Companies =================== -->
-        <section class="d-none d-lg-block">
+        <section class="d-none d-lg-block" id="deals">
             <div class="container-lg my-5">
                 <h1 class="text-center mb-4 fw-bold">Trusted by over 800+ companies</h1>
                 <div class="d-flex justify-content-evenly">
@@ -424,7 +424,7 @@
 
 
     <!-- ================================ Footer ============================= -->
-    <footer class="bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center" id="about">
         <div class="container-lg py-5">
             <div>
                 <h1><span class="text-warning">Code</span>Way</h1>
