one optional part added. Hopefully optional parts css will not be counted.

--- a/index.html
+++ b/index.html
@@ -231,6 +231,60 @@
         </section>
         <!-- =========== End of Popular Courses =========== -->
 
+        <!-- ==================== Explore E-learning =================== -->
+        <section class="mt-5">
+            <div class="container-lg">
+                <div class="bg-light rounded-3">
+                    <div class="row">
+                        <div class="col-12 col-sm-5 mb-4 mb-sm-0 m-sm-0">
+                            <img class="img-fluid custom-width" src="images/working.png" alt="" style="min-height: 500px;">
+                        </div>
+                        <div class="col-12 col-sm-7 d-flex align-items-center m-0">
+                            <div class="pe-3 pe-md-5 pb-5 pb-sm-0 ps-4 ps-sm-0">
+                                <h1>Explore The E-learning Institute</h1>
+                                <p><span style="display:inline-block; max-height: 72px; overflow: hidden;">There are many variations of passages of Lorem Ipsum available, but the majority have
+                                    suffered alteration in some form, by injected humour, or randomised words which don't
+                                    look
+                                    even slightly</span><span class="d-none d-xl-inline"> believable. If you are going to use a passage of Lorem Ipsum, you need to
+                                    be
+                                    sure.
+    
+                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                                    the
+                                    Internet tend to repeat predefined.</span>
+                                </p>
+                                <p class="d-none d-xl-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi reiciendis aperiam rem nobis unde, quae ex numquam praesentium eligendi. Quae.</p>
+                                <div class="d-flex flex-wrap">
+                                    <div class="me-4">
+                                        <h1>3.2K+</h1>
+                                        <p class="fs-5 fw-semibold">Online Course</p>
+                                    </div>
+                                    <div class="me-0 me-md-4">
+                                        <h1>600+</h1>
+                                        <p class="fs-5 fw-semibold">Expert Member</p>
+                                    </div>
+                                    <div>
+                                        <h1>1k+</h1>
+                                        <p class="fs-5 fw-semibold">Rating & Review</p>
+                                    </div>
+                                </div>
+                                <button class="btn btn-primary fs-5 fw-semibold px-4 py-2 text-white">Read More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
         <!-- ==================== Ready to Join =================== -->
         <section id="register">
             <div class="container-lg">
@@ -332,7 +386,9 @@
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p>The main difference between Grid and Flexbox is dimensional. Flexbox is one-dimensional and Grid is two-dimensional. Flexbox has only one direction, either column or row. But Grid has two direction, both column and row.</p>
+                                    <p>The main difference between Grid and Flexbox is dimensional. Flexbox is
+                                        one-dimensional and Grid is two-dimensional. Flexbox has only one direction,
+                                        either column or row. But Grid has two direction, both column and row.</p>
                                 </div>
                             </div>
                         </div>
@@ -346,7 +402,10 @@
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p>Bootstrap came with many pre-styled responsive designs while Tailwind've come with so many customizable facilities. Bootstrap is easy to use immediately, Tailwind is efficient for creating unique and more customized designs. Though both are CSS framerworks, they have different aspects of facilities.</p>
+                                    <p>Bootstrap came with many pre-styled responsive designs while Tailwind've come
+                                        with so many customizable facilities. Bootstrap is easy to use immediately,
+                                        Tailwind is efficient for creating unique and more customized designs. Though
+                                        both are CSS framerworks, they have different aspects of facilities.</p>
                                 </div>
                             </div>
                         </div>
@@ -360,7 +419,9 @@
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p>CSS box model is the combination of margin, padding, border and the main content area. That means an element along with margin, padding and border is considered as a CSS box. </p>
+                                    <p>CSS box model is the combination of margin, padding, border and the main content
+                                        area. That means an element along with margin, padding and border is considered
+                                        as a CSS box. </p>
                                 </div>
                             </div>
                         </div>
@@ -374,7 +435,11 @@
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p>Semantic tags were brought in HTML5, these tags are used to specify the content purpose. Such as an article in a website should be in the article tag, though it can be in the div tag. There are several semantic tags such as header, nav, main, aside, section, footer and article etc. Every semantic tag has the different specification aspect.</p>
+                                    <p>Semantic tags were brought in HTML5, these tags are used to specify the content
+                                        purpose. Such as an article in a website should be in the article tag, though it
+                                        can be in the div tag. There are several semantic tags such as header, nav,
+                                        main, aside, section, footer and article etc. Every semantic tag has the
+                                        different specification aspect.</p>
                                 </div>
                             </div>
                         </div>
